--- a/ConsolePoker/ConsolePoker.csproj
+++ b/ConsolePoker/ConsolePoker.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.JQuery.Unobtrusive.Ajax" Version="3.2.6" />
+  </ItemGroup>
+
 </Project>
