--- a/OpenPoker/OpenPoker.csproj
+++ b/OpenPoker/OpenPoker.csproj
@@ -5,9 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AjaxControlToolkit" Version="19.1.0" />
     <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.3" />
     <PackageReference Include="Microsoft.AspNet.Identity.OWIN" Version="2.2.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.1" />
+    <PackageReference Include="Microsoft.jQuery.Unobtrusive.Ajax" Version="3.2.6" />
     <PackageReference Include="Microsoft.Owin.Host.SystemWeb" Version="4.1.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+    <PackageReference Include="MicrosoftAjax" Version="4.0.20526" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ConsolePoker\ConsolePoker.csproj" />
   </ItemGroup>
 
 
