added simple asp.net core 3 Identity realisation

--- a/OpenPoker/OpenPoker.csproj
+++ b/OpenPoker/OpenPoker.csproj
@@ -6,8 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="AjaxControlToolkit" Version="19.1.0" />
-    <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.3" />
-    <PackageReference Include="Microsoft.AspNet.Identity.OWIN" Version="2.2.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.1" />
     <PackageReference Include="Microsoft.jQuery.Unobtrusive.Ajax" Version="3.2.6" />
     <PackageReference Include="Microsoft.Owin.Host.SystemWeb" Version="4.1.0" />
