added logging manager (for now only saves logs to file)

--- a/OpenPoker/OpenPoker.csproj
+++ b/OpenPoker/OpenPoker.csproj
@@ -20,6 +20,10 @@
     <ProjectReference Include="..\ConsolePoker\ConsolePoker.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="GameLogs\" />
+  </ItemGroup>
+
 
 
 </Project>
