--- a/OpenPoker/appsettings.json
+++ b/OpenPoker/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ALEX;Initial Catalog=OpenPokerDB;Integrated Security=True"
+    "DefaultConnection": "Data Source=ALEX;Initial Catalog=IdentityDB;Integrated Security=True"
   }
 }
